Actualización de dependencias
- Se actualiza la integración de Cl@ve siguiendo el modelo del kit de integración v3.
- Se adapta el código para el uso de una nueva versión de HttpClient y WSS4j.
- Se actualiza la biblioteca Charts.js.
- Fuerza al uso de versiones concretas de múltiples bibliotecas (log4j, Apache Santuario, Axis2...).
- Se eliminan bibliotecas redundantes y/o innecesarias.
- Se eliminan las bibliotecas modificadas que se debían instalar en el repositorio Maven local.